--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -6,5 +6,36 @@
   </head>
   <body>
     <h1>Contact</h1>
+
+    <h2>Contact me</h2>
+    <form action="/contact/send-message" method="post" enctype="multipart/form-data">
+      <label>
+        Your name: <input type="text" name="author">
+      </label>
+      <label>
+        Your email: <input type="email" name="sender">
+      </label>
+      <label>
+        Title: <input type="text" name="title">
+      </label>
+      <label>
+        Project design: <input type="file" name="project">
+      </label>
+      <label>
+        Message: <textarea name="message"></textarea>
+      </label>
+      <button type="submit">Send message</button>
+    </form>
+
+    {{#if isSent}}
+      <div class="isSent">Your message and the file {{fileName}} have been sent.</div>
+      <img src='/{{fileName}}' alt={{fileName}} />
+    {{/if}}
+
+    {{#if isError}}
+      <div class="isError">You can't leave empty fields!</div>
+    {{/if}}
+    
   </body>
+
 </html>
