--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>App</title>
+    <title>Simple Express App</title>
     <link rel="stylesheet" href="/style.css">
   </head>
   <body>
